--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
   "name": "botbuilder-linebot-connector",
-  "version": "1.1.1",
-  "description": "Microsoft Bot Framework V3 connector for Line api",
-  "main": "index.js",
+  "version": "2.0.10",
+  "description": "line botframework builder",
   "scripts": {
-    "dev": "gulp & nodemon dist/joke/ex.js & tsc -w",
-    "ngrok": " ngrok http 9090",
-    "start": "node dist/app.js"
+    "dev": "tsc --watch & nodemon  ./bot.js",
+    "dev2": "tsc --watch & nodemon --inspect-brk=5858  ./bot.js",
+    "start": "node ./bot.js",
+    "main": "index.js"
+  },
+  "dependencies": {
+    "Q": "0.0.1",
+    "array-intersection": "^0.1.2",
+    "async": "^2.1.4",
+    "azure-storage": "^2.6.0",
+    "body-parser": "^1.18.2",
+    "botbuilder": "^3.13.1",
+    "mongodb": "^2.2.22",
+    "node-fetch": "^1.7.3",
+    "q": "^1.4.1",
+    "restify": "^6.3.4",
+    "simplesets": "^1.2.0",
+    "ws": "^3.3.1"
+  },
+  "devDependencies": {
+    "@slack/client": "^3.9.0",
+    "@slack/events-api": "^1.0.1",
+    "@types/node": "^8.5.2",
+    "dotenv": "^4.0.0",
+    "fetch": "^1.1.0",
+    "lodash": "^4.17.4",
+    "pg": "^6.1.2",
+    "moment": "^2.17.1",
+    "mysql": "^2.13.0",
+    "node-cron": "^1.1.3",
+    "randomcolor": "^0.4.4",
+    "slack-node": "^0.1.8"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Wolke/botbuilder-line-connector.git"
-  },
-  "keywords": [
-    "linebot",
-    "botbuilder",
-    "connector"
-  ],
-  "author": "wolke",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Wolke/botbuilder-linebot-connector/issues"
-  },
-  "homepage": "https://github.com/Wolke/botbuilder-linebot-connector",
-  "dependencies": {
-    "body-parser": "^1.15.2",
-    "botbuilder": "^3.4.4",
-    "crypto": "^0.0.3",
-    "es6-shim": "^0.35.2",
-    "lodash": "^4.15.0",
-    "node-fetch": "^1.6.3"
-  },
-  "devDependencies": {
-    "@types/body-parser": "^0.0.33",
-    "@types/es6-shim": "^0.31.32",
-    "@types/parse": "^1.2.32",
-    "gulp": "^3.9.1",
-    "gulp-watch": "^4.3.11"
+    "url": "https://github.com/Wolke/botbuilder-linebot-connector.git"
   }
 }
